# career-copilot

./: .gitignore  README.md  SETUP.md  UV_GUIDE.md  migrate_to_uv.sh  pyproject.toml  requirements.txt
data/knowledge/skills/: agent_based_architectures.yaml  aws.yaml  ci_cd.yaml  docker.yaml  embeddings.yaml  fastapi.yaml  generative_ai_products.yaml  golang.yaml  kubernetes.yaml  langchain.yaml  llms.yaml  microservices.yaml  mlops.yaml  model_evaluation.yaml  observability.yaml  postgresql.yaml  prompt_engineering.yaml  python.yaml  rag.yaml  react.yaml  rest_apis.yaml  sql.yaml  system_design.yaml  typescript.yaml  vector_databases.yaml
src/: main.py
src/agents/: JobsManager.py  ResumeManager.py
src/config/: settings.py
src/core/knowledge/: __init__.py  store.py
src/core/matching/: __init__.py  agent.py  context_builder.py
src/database/: models.py
src/models/: __init__.py  database.py  entities.py
src/parsers/: __init__.py  resume.py
src/prompts/: JobManager.yaml  ResumeManager.yaml  job.yaml  matching.yaml  resume.yaml
src/scrapers/: __init__.py  base.py  linkedin.py
src/services/: __init__.py  job_service.py  resume_service.py
src/tools/: LinkedInScraper.py  ResumeParser.py
src/utils/: config.py
